// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuButton Matches Snapshot (defaultOpen) 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  width: 100%;
}

.c5 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #57666E,0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c5:focus {
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5,0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  min-width: 0;
  padding: 0 var(--spacing-1x) 0 var(--spacing-2x);
}

.c6 > span {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6:focus {
  outline: none;
}

.c6:active {
  background-color: #D9DDE2;
}

.c7 {
  color: #000000;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:focus {
  outline: none;
}

.c0 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #094C6C;
  border-color: transparent;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c1:hover {
  background-color: #094C6C;
}

.c1:disabled,
.c1:disabled:focus,
.c1:disabled:hover {
  background-color: transparent;
  color: #9CA7B4;
}

.c2 {
  margin-left: var(--spacing-1x);
}

.c4 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<div
  class="c0"
>
  <button
    aria-expanded="true"
    aria-haspopup="true"
    class="c1"
    data-testid="menu-button"
    type="button"
  >
    Test Button
    <svg
      class="c2"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    aria-multiselectable="false"
    class="c3 c4"
    role="listbox"
    tabindex="-1"
  >
    <ul
      class="c5"
      data-testid="listbox-list"
      role="menu"
      tabindex="0"
    >
      <li
        aria-label="Option A"
        aria-selected="false"
        class="c6"
        data-testid="listitem-optionA"
        id="undefined_optionA"
      >
        <a
          class="c7"
          href="/testa"
          role="menuitem"
        >
          Option A
        </a>
      </li>
      <li
        aria-label="Option B"
        aria-selected="false"
        class="c6"
        data-testid="listitem-optionB"
        id="undefined_optionB"
      >
        <a
          class="c7"
          href="/testb"
          role="menuitem"
        >
          Option B
        </a>
      </li>
      <li
        aria-label="Option C"
        aria-selected="false"
        class="c6"
        data-testid="listitem-optionC"
        id="undefined_optionC"
      >
        <a
          class="c7"
          href="/testc"
          role="menuitem"
        >
          Option C
        </a>
      </li>
      <li
        aria-label="Option D"
        aria-selected="false"
        class="c6"
        data-testid="listitem-optionD"
        id="undefined_optionD"
      >
        <a
          class="c7"
          href="/testd"
          role="menuitem"
        >
          Option D
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`MenuButton Matches Snapshot 1`] = `
.c3 {
  display: none;
  position: absolute;
  width: 100%;
}

.c5 {
  background-color: #FFFFFF;
  border-radius: var(--border-radius);
  box-shadow: 0 0 0 1px #57666E,0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  margin: 0;
  max-height: 128px;
  overflow-y: auto;
  padding: 0;
  width: 100%;
}

.c5:focus {
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5,0 10px 20px 0 rgba(0,0,0,0.19);
  outline: none;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  color: #000000;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  height: 32px;
  line-height: 32px;
  min-width: 0;
  padding: 0 var(--spacing-1x) 0 var(--spacing-2x);
}

.c6 > span {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c6:focus {
  outline: none;
}

.c6:active {
  background-color: #D9DDE2;
}

.c7 {
  color: #000000;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:focus {
  outline: none;
}

.c0 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c1:hover {
  background-color: #094C6C;
}

.c1:disabled,
.c1:disabled:focus,
.c1:disabled:hover {
  background-color: transparent;
  color: #9CA7B4;
}

.c2 {
  margin-left: var(--spacing-1x);
}

.c4 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<div
  class="c0"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="c1"
    data-testid="menu-button"
    type="button"
  >
    Test Button
    <svg
      class="c2"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    aria-multiselectable="false"
    class="c3 c4"
    role="listbox"
    tabindex="-1"
  >
    <ul
      class="c5"
      data-testid="listbox-list"
      role="menu"
      tabindex="0"
    >
      <li
        aria-label="Option A"
        aria-selected="false"
        class="c6"
        data-testid="listitem-optionA"
        id="undefined_optionA"
      >
        <a
          class="c7"
          href="/testa"
          role="menuitem"
        >
          Option A
        </a>
      </li>
      <li
        aria-label="Option B"
        aria-selected="false"
        class="c6"
        data-testid="listitem-optionB"
        id="undefined_optionB"
      >
        <a
          class="c7"
          href="/testb"
          role="menuitem"
        >
          Option B
        </a>
      </li>
      <li
        aria-label="Option C"
        aria-selected="false"
        class="c6"
        data-testid="listitem-optionC"
        id="undefined_optionC"
      >
        <a
          class="c7"
          href="/testc"
          role="menuitem"
        >
          Option C
        </a>
      </li>
      <li
        aria-label="Option D"
        aria-selected="false"
        class="c6"
        data-testid="listitem-optionD"
        id="undefined_optionD"
      >
        <a
          class="c7"
          href="/testd"
          role="menuitem"
        >
          Option D
        </a>
      </li>
    </ul>
  </div>
</div>
`;
